remove gap fix

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -407,7 +407,7 @@ textarea {
 
 
 .nav-frame {
-	/*top: 17px;*/
+	top: 17px;
 }
 
 .section {
